# panic-at-the-lambda

./: Cargo.toml  package-lock.json  package.json  serverless.yml
src/: main.rs  reddit.rs
