[package]
name = "slack-bot-lambda"
version = "0.1.0"
authors = ["Justin Barclay <justincbarclay@gmail.com>"]
edition = "2018"

[dependencies]
serde = {version = "1.0.88", features = [ "derive" ]}
serde_json = "1.0.33"

regex = "1.1.0"
rand = "0.6.1"
reqwest = "0.9.5"

lambda_runtime = "0.2.0"
aws_lambda_events = "0.2.3"

openssl = "0.10.15"